Use JavaLaunchCommandBuilder and JobJarMaker to generate evaluator task (#13)
Use JavaLaunchCommandBuilder and JobJarMaker to generate evaluator task