@@ -22,25 +22,24 @@ import com.microsoft.azure.batch.BatchClient;
 import com.microsoft.azure.batch.auth.BatchSharedKeyCredentials;
 import com.microsoft.azure.batch.protocol.models.ResourceFile;
 import com.microsoft.azure.batch.protocol.models.TaskAddParameter;
-import org.apache.commons.lang.StringUtils;
 import org.apache.reef.annotations.audience.DriverSide;
 import org.apache.reef.annotations.audience.Private;
 import org.apache.reef.runime.azbatch.parameters.AzureBatchAccountKey;
 import org.apache.reef.runime.azbatch.parameters.AzureBatchAccountName;
 import org.apache.reef.runime.azbatch.parameters.AzureBatchAccountUri;
 import org.apache.reef.runime.azbatch.util.AzureStorageUtil;
+import org.apache.reef.runime.azbatch.util.CommandBuilder;
 import org.apache.reef.runtime.common.driver.api.ResourceLaunchEvent;
+import org.apache.reef.runtime.common.driver.api.ResourceReleaseEvent;
 import org.apache.reef.runtime.common.driver.api.ResourceRequestEvent;
-import org.apache.reef.runtime.common.driver.api.RuntimeParameters;
-import org.apache.reef.runtime.common.driver.resourcemanager.NodeDescriptorEvent;
 import org.apache.reef.runtime.common.driver.resourcemanager.NodeDescriptorEventImpl;
-import org.apache.reef.runtime.common.driver.resourcemanager.ResourceAllocationEvent;
 import org.apache.reef.runtime.common.driver.resourcemanager.ResourceEventImpl;
-import org.apache.reef.runtime.common.files.REEFFileNames;
+import org.apache.reef.runtime.common.files.*;
+import org.apache.reef.runtime.common.parameters.JVMHeapSlack;
+import org.apache.reef.tang.Configuration;
 import org.apache.reef.tang.annotations.Parameter;
 import org.apache.reef.tang.exceptions.BindException;
 import org.apache.reef.tang.formats.ConfigurationSerializer;
-import org.apache.reef.wake.EventHandler;
 import org.apache.reef.wake.remote.address.LocalAddressProvider;
 
 import javax.inject.Inject;
@@ -48,6 +47,7 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -59,17 +59,24 @@ import java.util.logging.Logger;
 public final class AzureBatchResourceManager {
 
   private static final Logger LOG = Logger.getLogger(AzureBatchResourceManager.class.getName());
-  private String localAddress;
+  private static final String AZ_BATCH_JOB_ID_ENV = "AZ_BATCH_JOB_ID";
+
   private final REEFFileNames fileNames;
   private final ConfigurationSerializer configurationSerializer;
   private final String azureBatchAccountUri;
   private final String azureBatchAccountName;
   private final String azureBatchAccountKey;
   private final String jobId;
+
   private final AzureStorageUtil azureStorageUtil;
   private final REEFEventHandlers reefEventHandlers;
   private final String taskId;
-  private static final String AZ_BATCH_JOB_ID_ENV = "AZ_BATCH_JOB_ID";
+  private final Map<String, ResourceRequestEvent> containers = new ConcurrentHashMap<>();
+
+  private final String localAddress;
+  private final double jvmHeapFactor;
+  private final JobJarMaker jobJarMaker;
+  private final CommandBuilder launchCommandBuilder;
 
   @Inject
   AzureBatchResourceManager(
@@ -78,9 +85,12 @@ public final class AzureBatchResourceManager {
       final REEFEventHandlers reefEventHandlers,
       final ConfigurationSerializer configurationSerializer,
       final AzureStorageUtil azureStorageUtil,
+      final JobJarMaker jobJarMaker,
+      final CommandBuilder launchCommandBuilder,
       @Parameter(AzureBatchAccountUri.class) final String azureBatchAccountUri,
       @Parameter(AzureBatchAccountName.class) final String azureBatchAccountName,
-      @Parameter(AzureBatchAccountKey.class) final String azureBatchAccountKey) {
+      @Parameter(AzureBatchAccountKey.class) final String azureBatchAccountKey,
+      @Parameter(JVMHeapSlack.class) final double jvmHeapSlack) {
     this.localAddress = localAddressProvider.getLocalAddress();
     this.fileNames = fileNames;
     this.reefEventHandlers = reefEventHandlers;
@@ -96,6 +106,9 @@ public final class AzureBatchResourceManager {
         .replace(' ', '-')
         .replace(':', '-')
         .replace('.', '-');
+    this.jvmHeapFactor = 1.0 - jvmHeapSlack;
+    this.jobJarMaker = jobJarMaker;
+    this.launchCommandBuilder = launchCommandBuilder;
   }
 
   public void onResourceRequested(final ResourceRequestEvent resourceRequestEvent) {
@@ -117,6 +130,14 @@ public final class AzureBatchResourceManager {
         .setVirtualCores(1)
         .setRuntimeName(RuntimeIdentifier.RUNTIME_NAME)
         .build());
+
+    this.containers.put(id, resourceRequestEvent);
+  }
+
+  public void onResourceReleased(final ResourceReleaseEvent resourceReleaseEvent) {
+    String id = resourceReleaseEvent.getIdentifier();
+    LOG.log(Level.FINEST, "Got onResourceReleasedEvent of Id: {0} in AzureBatchResourceManager", id);
+    this.containers.remove(id);
   }
 
   public void onResourceLaunched(final ResourceLaunchEvent resourceLaunchEvent) {
@@ -128,28 +149,46 @@ public final class AzureBatchResourceManager {
       throw new RuntimeException("Unable to write configuration.", e);
     }
 
-    final List<String> command = getLaunchCommand(resourceLaunchEvent);
+    ResourceRequestEvent container = this.containers.get(resourceLaunchEvent.getIdentifier());
+    String command = this.launchCommandBuilder.buildEvaluatorCommand(
+        resourceLaunchEvent, container.getMemorySize().get(), this.jvmHeapFactor);
 
     try {
-      launchBatchTaskWithConf(evaluatorConfigurationFile, command);
+      File jarFile = buildEvaluatorSubmissionJar(evaluatorConfigurationFile);
+      launchBatchTaskWithConf(command, jarFile);
     } catch (IOException ex) {
       LOG.log(Level.SEVERE, "Error submitting Azure Batch request", ex);
       throw new RuntimeException(ex);
     }
   }
 
-  private List<String> getLaunchCommand(final ResourceLaunchEvent launchRequest) {
-    // TODO: Rebuild this command using JavaLaunchCommandBuilder
-    return Collections.unmodifiableList(Arrays.asList(
-        "/bin/sh -c \"",
-        "unzip local.jar;",
-        "java -Xmx256m -XX:PermSize=128m -XX:MaxPermSize=128m -classpath local/*:global/*",
-        "-Dproc_reef org.apache.reef.runtime.common.REEFLauncher reef/local/evaluator.conf",
-        "\""
-    ));
+  private File buildEvaluatorSubmissionJar(final File evaluatorConfigurationFile) throws IOException {
+
+    final Configuration evaluatorConfig = this.configurationSerializer.fromFile(evaluatorConfigurationFile);
+    Set<FileResource> localFiles = new HashSet<>();
+    localFiles.add(getFileResourceFromFile(evaluatorConfigurationFile, FileType.PLAIN));
+
+    Set<FileResource> globalFiles = new HashSet<>();
+
+    File globalFolder = new File(this.fileNames.getGlobalFolderPath());
+    for (final File fileEntry : globalFolder.listFiles()) {
+      globalFiles.add(getFileResourceFromFile(fileEntry, FileType.LIB));
+    }
+
+    return this.jobJarMaker.createEvaluatorSubmissionJAR(
+        evaluatorConfig,
+        globalFiles,
+        localFiles);
   }
 
-  private void launchBatchTaskWithConf(final File evaluatorConf, final List<String> command) throws IOException {
+  private FileResource getFileResourceFromFile(final File configFile, final FileType type) {
+    return FileResourceImpl.newBuilder()
+        .setName(configFile.getName())
+        .setPath(configFile.getPath())
+        .setType(type).build();
+  }
+
+  private void launchBatchTaskWithConf(final String command, final File jarFile) throws IOException {
     BatchSharedKeyCredentials cred = new BatchSharedKeyCredentials(
         this.azureBatchAccountUri, this.azureBatchAccountName, this.azureBatchAccountKey);
     BatchClient client = BatchClient.open(cred);
@@ -158,25 +197,18 @@ public final class AzureBatchResourceManager {
     LOG.log(Level.FINE, "Creating a job folder on Azure at: {0}.", folderName);
     URI jobFolderURL = this.azureStorageUtil.createFolder(folderName);
 
-    final URI uploadedConfFileUri = this.azureStorageUtil.uploadFile(jobFolderURL, evaluatorConf);
-    final ResourceFile confSourceFile = new ResourceFile()
-        .withBlobSource(uploadedConfFileUri.toString())
-        .withFilePath(evaluatorConf.getPath());
-
-    final File localJar = new File("local.jar");
-    final URI jarFileUri = this.azureStorageUtil.uploadFile(jobFolderURL, localJar);
+    final URI jarFileUri = this.azureStorageUtil.uploadFile(jobFolderURL, jarFile);
     final ResourceFile jarSourceFile = new ResourceFile()
         .withBlobSource(jarFileUri.toString())
-        .withFilePath(localJar.getPath());
+        .withFilePath("local.jar");
 
     List<ResourceFile> resources = new ArrayList<>();
-    resources.add(confSourceFile);
     resources.add(jarSourceFile);
 
     TaskAddParameter taskAddParameter = new TaskAddParameter()
         .withId(this.taskId)
         .withResourceFiles(resources)
-        .withCommandLine(StringUtils.join(command, ' '));
+        .withCommandLine(command);
 
     client.taskOperations().createTask(jobId, taskAddParameter);
   }
